--- a/src/components/GenshinUserCard/style.scss
+++ b/src/components/GenshinUserCard/style.scss
@@ -154,7 +154,7 @@
   z-index: 0;
   width: min(465px, 100% - 35px);
   box-shadow: inset 0 0 15px 15px rgba(0, 0, 0, 0.1),
-    inset 0 100px 0 0 rgba(0, 0, 0, 0.3);
+    inset 0 250px 0 0 rgba(0, 0, 0, 0.3);
 }
 
 .account-hover-wrapper {
